feat: change json in editor

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="json-editor">
       <div class="json-editor-header">
         <h1>JSON Viewer</h1>
-        <button class="btn">Render</button>
+        <button class="btn" id="btn-render">Render</button>
       </div>
       <div class="json-editor-body">
         <textarea id="json" cols="30" rows="10"></textarea>
